--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -3,7 +3,7 @@
   <div class="mb-5">
     <%= form.text_field :description, placeholder: "Add new todo", class: "inline-block rounded-sm border border-gray-200 outline-none px-3 py-2 mt-2 w-96" %>
 
-    <span class="ml-2 text-gray-900"><%= form.select :status, Todo.statuses.keys, class:"" %></span>
+    <span class="ml-2 text-gray-900"><%= form.select :status, Todo.statuses.keys, {}, { class: "border border-red" } %></span>
 
     <%= form.submit "Save Todo", class: "btn px-4 py-2 ml-2 bg-blue-600 text-white hover:bg-blue-500" %>
   </div>
