--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -37,9 +37,9 @@
         <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
 
           <td class="py-4 px-6">
-           <% if @todo.status = 0 then %>
+           <% if @todo.status == "Pending" then %>
             <span class="bg-red-100 text-red-600 py-1 px-4 rounded-full text-xs dark:bg-red-200 dark:text-red-800 text-center"><%= @todo.status %></span>
-            <% elsif @todo.status = 1 then %>
+            <% elsif @todo.status == "Completed" then %>
             <span class="bg-green-100 text-green-600 py-1 px-4 rounded-full text-xs dark:bg-green-200 dark:text-green-800 text-center"><%= @todo.status %></span>
             <% else %>
             <span class="bg-yellow-100 text-yellow-600 py-1 px-4 rounded-full text-xs dark:bg-yellow-200 dark:text-yellow-800 text-center"><%= @todo.status %></span>
