--- a/app/views/auth/sign_up.html.erb
+++ b/app/views/auth/sign_up.html.erb
@@ -1,8 +1,18 @@
 <section class="" >
-   
+
    <div class=" w-96 block ml-[23rem] mt-12">
        <div class="p-4 w-[31.5rem]  bg-white rounded-lg border border-gray-200 shadow-sm sm:p-6 md:p-8 dark:bg-gray-800 dark:border-gray-700">
 
+        <% if notice.present? %>
+            <div class="flex p-4 mb-2 text-sm text-red-700 bg-red-100 rounded-md dark:bg-red-200 dark:text-red-800" role="alert">
+            <svg aria-hidden="true" class="flex-shrink-0 inline w-5 h-5 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>
+            <span class="sr-only">Info</span>
+            <div>
+                <%= notice %>
+            </div>
+            </div>
+        <% end %>
+        
            <%= form_with(scope: :user, class: "space-y-6 w-96") do |form| %>
 
                <h5 class="text-xl font-medium text-gray-900 dark:text-white">Create a Free Account</h5>
