--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .btn {
-    @apply mt-3 bg-blue-50 text-slate-600 rounded-sm px-5 inline-block font-medium cursor-pointer hover:bg-blue-100;
+    @apply mt-3 bg-white text-slate-600 border border-gray-200 rounded-sm px-5 inline-block font-medium cursor-pointer hover:bg-gray-50;
   }
 }
 
