--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -6,12 +6,18 @@
   </p>
 <% end %>
 
-  <h1 class="bg-blue-50 font-semibold text-slate-600 text-xl p-6">My Todo List</h1>
+  <div class="flex items-center justify-between">
+    <div><h1 class="font-semibold text-slate-600 text-xl p-6"> <%= @user.first_name %>'s Todo List</h1></div>
+    <% if @current_user %>
+    <div><%= link_to "Sign Out", logout_path, method: :post, data: { turbo_method: :post }, class: "text-slate-600 bg-white border border-gray-200 hover:border-red-600 hover:text-red-600 hover:bg-red-100 font-medium rounded-sm text-sm px-5 py-2.5 mr-2 mb-2 "  %></div>
+    <% end %>
+  </div>
+
 
 <%# Table %>
   <div class="overflow-x-auto relative mb-10">
     <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-      <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+      <thead class="text-xs text-gray-700 uppercase border border-gray-100 dark:bg-gray-700 dark:text-gray-400">
         <tr>
           <th scope="col" class="p-4">
             <div class="flex items-center">
