add sign in exceptions for home

--- a/app/views/todos/home.html.erb
+++ b/app/views/todos/home.html.erb
@@ -1,6 +1,6 @@
 <section class=" flex flex-col">
 
-<h1 class="pt-8 text-5xl text-slate-300 text-center" >HELLO THERE 👋 🥳🎉</h1>
+<h1 class="pt-8 text-5xl text-slate-300 text-center" >WELCOME TO MY TODO APP 🎉</h1>
 
 <div class="flex self-center mr-20 mt-8">
   <div class="inline-flex items-center justify-center ml-20 rounded-md " role="group">
